client/css/reports-manager.css
/* ... */
		.visualization-form h3 > i {
			margin-right: var(--gap);
			width: 10px;
			transition: margin-right var(--transition-duration);
		}
		.visualization-form h3:hover > i {
			margin-right: calc(var(--gap) * 2);
		}
	.visualization-form h4 {
		margin: 0 0 calc(var(--gap) * 2)
	}
	.visualization-form fieldset {
		background: var(--color-surface);
		color: var(--color-surface-text);
		padding: 15px;
		margin: 0;
		border-radius: 3px;
		border: 0;
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
	}
		.visualization-form fieldset legend {
			font-size: 90%;
			padding: 5px 10px;
			border-radius: 5px;
			background: var(--color-secondary);
			color: var(--color-secondary-text);
			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
			transition: background var(--transition-duration),
						color var(--transition-duration);
		}
		#stage-configure-visualization fieldset legend.interactive:hover {
			background: var(--color-hover);
			color: var(--color-hover-text);
			cursor: pointer;
		}
		#stage-configure-visualization fieldset legend.interactive:active {
			box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.15);
		}
	.visualization-form .subform {
		display: grid;
		padding: calc(var(--gap) * 2);
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
		border-radius: 3px;
	}

	.visualization-form .axes,
	.visualization-form .layers {
		background: transparent;
	}
		.visualization-form .axes .form,
		.visualization-form .layers .form {
			background: transparent;
			padding: 0;
		}
			.visualization-form .axes .ellipsis {
				color: #ccc;
				text-align: center;
				cursor: pointer;
				transition: color var(--transition-duration);
			}
			.visualization-form .axes .ellipsis:hover {
				color: #666;
			}
			.visualization-form .axes .form .advanced-toggle {
				font-size: 90%;
				text-align: center;
				color: #888;
				cursor: pointer;
				border-bottom: 1px dashed #ccc;
				padding-bottom: var(--gap);
			}
			.visualization-form .layers .form .opacity > span {
				justify-content: space-between;
			}
			.visualization-form .layers .form .opacity > span .value {
				font-weight: normal;
				color: #999;
			}
		.visualization-form .axes .add-axis .form,
		.visualization-form .layers .add-layer .form {
			grid-template-columns: minmax(max-content, 200px) max-content;
			grid-gap: calc(var(--gap) * 2);
		}
	.visualization-form #configure-visualization-form {
		display: flex;
		flex-direction: column;
	}
	.visualization-form .liner-visualization-options {
		display: flex;
		flex-direction: column;
	}
	.visualization-form .transformations .list {
		display: grid;
		grid-gap: calc(var(--gap) * 2);
	}
		.visualization-form .transformations fieldset {
			position: relative;
		}
		.visualization-form .transformations fieldset.disabled {
			opacity: 0.6;
			background: #ccc;
		}
			.visualization-form .transformations fieldset > .actions {
				position: absolute;
				right: 0;
				top: 11px;
				border-top-right-radius: 3px;
				font-size: 90%;
				display: flex;
			}
				.visualization-form .transformations fieldset > .actions > div {
					cursor: pointer;
					margin-top: 2px;
					padding: 5px 8px;
					color: var(--color-grey);
					transition: color var(
					--transition-duration),
								background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				.visualization-form .transformations fieldset > .actions > div:last-child {
					border-top-right-radius: 3px;
				}
				.visualization-form .transformations fieldset > .actions > div:hover {
					background: var(--color-hover);
					color: var(--color-hover-text);
				}
				.visualization-form .transformations fieldset > .transformation.disabled .actions > div.disabled {
					background: #ccc;
				}
				.visualization-form .transformations fieldset > .actions > div.remove:hover {
					color: var(--color-red);
				}
				.visualization-form .transformations fieldset > .actions > div:active {
					box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
				}
			.visualization-form .transformations .transformation {
				display: grid;
				grid-template-columns: max-content;
				grid-gap: calc(var(--gap) * 2);
				align-items: flex-start;
			}
				.visualization-form .transformations .transformation > div {
					display: grid;
					grid-template-columns: 1fr;
					grid-gap: calc(var(--gap) * 2);
					width: max-content;
				}
				.visualization-form .transformations .transformation > .restrict_type {
					display: grid;
					grid-template-columns: repeat(2, max-content);
				}
					.visualization-form .transformations .transformation h4 {
						margin: 0;
						border-bottom: 1px dashed var(--color-border);
						padding-bottom: var(--gap);
						font-size: 90%;
					}

				.visualization-form .transformations .transformation .form-row {
					display: grid;
					grid-auto-flow: column;
					grid-gap: calc(var(--gap) * 2);
				}
				.visualization-form .transformations .transformation .form-row button svg {
					margin: 0;
				}
				.visualization-form .transformations .transformation button {
					white-space: nowrap;
				}
	#stage-configure-visualization .dashboards {
	}
		#stage-configure-visualization .dashboards .form {
			grid-template-columns: repeat(5, max-content);
			grid-gap: calc(var(--gap) * 2);
		}
		#stage-configure-visualization .dashboards .add-dashboard .form {
			grid-template-columns: repeat(4, max-content);
			background: transparent;
			padding: 0;
		}
			#stage-configure-visualization .dashboards .delete:hover {
				background: #c33;
				border-color: transparent;
			}
				#stage-configure-visualization .dashboards .delete > i,
				#stage-configure-visualization .dashboards .view-dashboard > i {
					margin: 0;
				}
			#stage-configure-visualization .dashboards .dashboard_id {
				width: 200px;
			}
			#stage-configure-visualization .dashboards button[disabled]:hover {
				background: unset;
				border: 1px solid #ccc;
			}

	.visualization-form .filters {
	}
/* ... */

